--- a/src/main/java/View/Dashboard.form
+++ b/src/main/java/View/Dashboard.form
@@ -82,7 +82,9 @@
                   <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="171" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="nameLabelDash" min="-2" pref="140" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -92,10 +94,11 @@
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                          <Component id="jLabel9" alignment="1" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="jLabel10" alignment="1" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="jLabel11" alignment="1" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="nameLabelDash" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jLabel9" alignment="0" pref="34" max="32767" attributes="0"/>
+                          <Component id="jLabel10" alignment="0" pref="34" max="32767" attributes="0"/>
+                          <Component id="jLabel11" alignment="0" pref="34" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
@@ -137,6 +140,16 @@
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel11MouseClicked"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="nameLabelDash">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Semibold" size="16" style="0"/>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="Dashboard_nameLabelDash"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
